adding markdown readme header; ajax autorefresh; required.txt for markdown

--- a/app/static/stylesheets/style.css
+++ b/app/static/stylesheets/style.css
@@ -1,15 +1,59 @@
-body{
+/* body{
   font:1.2em normal Arial,sans-serif;
   color:#34495E;
-}
+} */
 
-h1{
+/* h1{
   text-align:center;
   text-transform:uppercase;
   letter-spacing:-2px;
   font-size:2.5em;
   margin:20px 0;
+} */
+
+
+pre code {
+  background-color: #eee;
+  border: 1px solid #999;
+  display: block;
+  /* white-space: pre; */
+  /* -webkit-overflow-scrolling: touch; */
+  overflow-x: scroll;
+  /* white-space: nowrap; */
+  overflow-y: hidden;
+  max-width: 100%;
+  min-width: 100px;
+  padding: 0;
 }
+
+
+.scrolling-wrapper-flexbox {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+
+  .card {
+    flex: 0 0 auto;
+  }
+}
+
+code {
+  font-family: MyFancyCustomFont, monospace;
+  font-size: inherit;
+}
+
+/* Code in text */
+p > code,
+li > code,
+dd > code,
+td > code {
+  background: #eee;
+  word-wrap: break-word;
+  box-decoration-break: clone;
+  padding: .1rem .3rem .2rem;
+  border-radius: .2rem;
+}
+
 
 .container{
   width:90%;
@@ -31,21 +75,6 @@ table{
 }
 
 
-.blue{
-  border:2px solid #1ABC9C;
-}
-
-.blue thead{
-  background:#1ABC9C;
-}
-
-.purple{
-  border:2px solid #9B59B6;
-}
-
-.purple thead{
-  background:#9B59B6;
-}
 
 thead{
   color:white;
