--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,9 +9,9 @@
 
 {{ header|safe }}
 
-<div id="tableHolder">
+<div id="refresher">
 
-<table class="crimson" id="tableHolder">
+<table class="crimson">
 
   <thead>
 
