--- a/app/static/stylesheets/main.css
+++ b/app/static/stylesheets/main.css
@@ -18,6 +18,12 @@ div.desc {
   text-align: center;
 }
 
+div.header {
+  padding: 15px;
+  text-align: center;
+  font-size: 40;
+}
+
 * {
   box-sizing: border-box;
 }
